<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mvvm_login">mvvm登陆</string>
    <string name="is_useful_char">!#$%\'\"()*+,-./0123456789:;=?~@ABCDEFGHIJKLMNOPQRSTUVWXYZ[]^_、abcdefghijklmnopqrstuvwxyz{|}&amp;&lt;&gt;&quot;</string>
    <string name="enter_account">请输入账户</string>
    <string name="enter_login_pass">请输入密码</string>
    <string name="login_now">登陆</string>
    <string name="draw">绘制页面</string>
    <string name="snack_bar">状态框</string>
    <string name="nav_forget_login_pass">忘记登陆密码</string>
    <string name="error_msg">错误</string>
    <string name="title_msg">让汽配采购更放心</string>
    <string name="time">现在</string>
    <string name="store_more">进店更多</string>
    <string name="guide">指导提醒</string>
    <string name="product_visible_after_certification">(认证后可见)</string>
    <string name="title_dispatch_time">调货备注: %1$s, 调货(%2$s天)发货</string>

    <string name="inquiry_quality">品质</string>
    <string name="inquiry_quality_all">按整单选</string>
    <string name="inquiry_quality_single">按单个配件选</string>

    <string name="im_style">im样式</string>
    <string name="ad_style">广告弹窗</string>
    <string name="snack_bar1">snackBar弹窗1</string>
    <string name="snack_bar2">snackBar弹窗2</string>
    <string name="go_callback_activity">回调页面事例，几种写法，这里都有</string>
    <string name="callback_title">回调样例</string>
    <string name="callback_for_java">java回调样例</string>
    <string name="callback_for_kotlin">kotlin回调样例</string>
    <string name="callback_for_kotlin_callback">kotlin-callback回调样例</string>
    <string name="callback_for_kotlin_callback_simple">kotlin-callback-simple回调样例</string>
    <string name="callback_for_kotlin_ds">kotlin-dsl回调样例</string>
    <string name="callback_for_kotlin_livedata">kotlin-livedata回调样例</string>
    <string name="delete">删除</string>
    <string name="top">置顶</string>
    <string name="more">更多</string>
    <string name="callback_for_kotlin_internal">kotlin-internal回调样例</string>
    <string name="inquiry_quality_other">其他</string>

    <string name="main_finish_task_notification">已完成【%s】任务，积分</string>
    <string name="main_point">+%s</string>

    <string name="exposure">曝光</string>

    <string name="tab">tabActivity</string>
    <string name="window">视频浮窗</string>
    <string name="web_window">网页浮窗</string>

    <string name="test">查看图片 %s</string>

    <string name="show_video_floating_window">显示直播悬浮窗口</string>
    <string name="dismiss_video_floating_window">隐藏直播悬浮窗口</string>

    <string name="show_inter_floating_window">显示悬浮窗口</string>
    <string name="dismiss_inter_floating_window">隐藏悬浮窗口</string>
    <string name="show_floating_window">显示外悬浮窗口</string>
    <string name="dismiss_floating_window">隐藏外悬浮窗口</string>
    <string name="show_video_view_floating_window">显示视频浮view</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="vertical_video">竖屏</string>
    <string name="cut_video">截屏</string>
    <string name="stream_video">直播</string>
    <string name="mp4_video">mp4</string>
    <string name="replay_video">回放</string>
    <string name="horizontal_video">横屏</string>

    <string name="im_hint_message_input">请输入您要咨询的问题</string>
    <string name="group_title">选择提醒的成员</string>
    <string name="all_member">所有人（%d）</string>
    <string name="im_contacts_search_hint">搜索联系人</string>

    <string name="order_packages_delivery_status">[%s]</string>
    <string name="order_packages_delivery_time">预计 %s 前送达</string>
    <string name="order_packages_delivery_distance">距您%s公里</string>
</resources>