<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_show_inter_floating_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_inter_floating_window"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_dismiss_inter_floating_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_inter_floating_window"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_show_inter_floating_window" />

    <Button
        android:id="@+id/btn_show_floating_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_floating_window"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_dismiss_inter_floating_window"  />

    <Button
        android:id="@+id/btn_dismiss_floating_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_floating_window"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_show_floating_window" />

    <!--    <com.yubin.draw.widget.view.video.CustomVideoView-->
    <!--        android:id="@+id/video_view"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>