<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delivery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/order_packages_delivery_status"
        android:textColor="#FC6405"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="[配送中]" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delivery_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/order_packages_delivery_time"
        android:textColor="@color/color_cec_black_ff2a2a2b"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/delivery_status"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="预计 11:50 前送达" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delivery_query_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_cec_order_list_positive_normal_drawable"
        android:drawableEnd="@drawable/icon_order_query_arrow"
        android:paddingStart="9dp"
        android:paddingTop="1dp"
        android:paddingEnd="6dp"
        android:paddingBottom="1dp"
        android:text="查看"
        android:textColor="#E51E1E"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hourly_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/delivery_query_arrow">

        <com.litao.slider.NiftySlider
            android:id="@+id/delivery_slider"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:padding="0dp"
            android:valueFrom="0"
            android:valueTo="100"
            android:value="10"
            app:enableDrawHalo="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbRadius="16dp"
            app:sliderTouchMode="normal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_distance_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29.5dp"
            android:background="@drawable/hourly_tag"
            android:paddingStart="3dp"
            android:paddingTop="2dp"
            android:paddingEnd="3dp"
            android:paddingBottom="2dp"
            android:text="@string/order_packages_delivery_distance"
            android:textSize="9sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
